refactor: adopt sequenced collections getFirst()/getLast() (Java 21)
Replace legacy first/last element access with SequencedCollection methods:
- 21x .get(0) → .getFirst() across Lists
- 2x iterator().next() → .getFirst() (UserServiceImpl, UserUtil)
- 2x SortedSet.last() → .getLast() (HlsSession)